fix(ci): Fix repo urls

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Compile with SourceMod
 
 on:
   pull_request:
-    branches: master
+    branches: main
   push:
-    branches: master
+    branches: main
 
 jobs:
   build:
