--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           # echo "SCRIPTS_PATH=scripting" >> $GITHUB_ENV
           echo "SCRIPTS_PATH=scripting" >> $GITHUB_ENV
+          
       - name: Setup SourcePawn Compiler ${{ matrix.SM_VERSION }}
         uses: rumblefrog/setup-sp@master
         with:
@@ -28,7 +29,7 @@ jobs:
 
       - name: Compile plugins
         run: |
-          for file in scripting/*.sp
+          for file in ./scripting/*.sp
           do
             echo -e "\nCompiling $file..."
             spcomp -E -w234 -O2 -v2 -i include $file
