--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,4 @@ jobs:
             echo -e "\nCompiling $file..."
             spcomp -E -w234 -O2 -v2 -i include $file
           done
-        working-directory: ${{ env.SCRIPTS_PATH }}
+        working-directory: ${{ github.workspace }}
