--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set environment variables
-        run: |
-          echo "SCRIPTS_PATH=scripting" >> $GITHUB_ENV
-
       - name: Setup SourcePawn Compiler ${{ matrix.SM_VERSION }}
         uses: rumblefrog/setup-sp@master
         with:
@@ -31,6 +27,6 @@ jobs:
           for file in scripting/${plugin_name}*.sp
           do
             echo -e "\nCompiling $file..."
-            spcomp -E -w234 -O2 -v2 -i include $file
+            spcomp -E -w234 -O2 -v2 -i ./scripting/include $file
           done
         working-directory: ${{ github.workspace }}
