--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        SM_VERSION: ["1.10", "1.11"]
+        SM_VERSION: ["1.10"]
 
     steps:
       - uses: actions/checkout@v2
@@ -27,6 +27,6 @@ jobs:
           for file in scripting/${plugin_name}*.sp
           do
             echo -e "\nCompiling $file..."
-            spcomp -E -w234 -O2 -v2 -i ./scripting/include $file
+            spcomp -w234 -O2 -v2 -i ./scripting/include $file
           done
         working-directory: ${{ github.workspace }}
