--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,15 +12,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        SM_VERSION: ["1.10", "1.11"]
+        SM_VERSION: ["1.10"]
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set environment variables
-        run: |
-          # echo "SCRIPTS_PATH=scripting" >> $GITHUB_ENV
-          echo "SCRIPTS_PATH=scripting" >> $GITHUB_ENV
       - name: Setup SourcePawn Compiler ${{ matrix.SM_VERSION }}
         uses: rumblefrog/setup-sp@master
         with:
@@ -28,9 +24,9 @@ jobs:
 
       - name: Compile plugins
         run: |
-          for file in scripting/*.sp
+          for file in scripting/${plugin_name}*.sp
           do
             echo -e "\nCompiling $file..."
-            spcomp -E -w234 -O2 -v2 -i include $file
+            spcomp -w234 -O2 -v2 -i ./scripting/include $file
           done
-        working-directory: ${{ env.SCRIPTS_PATH }}
+        working-directory: ${{ github.workspace }}
