--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -22,7 +22,7 @@ jobs:
           for file in scripting/${plugin_name}*.sp
           do
             echo -e "\nCompiling $file..."
-            spcomp -w234 -O2 -v2 -i ./scripting/include $file -D compiled
+            spcomp -w234 -O2 -v2 -i ./scripting/include $file
           done
         working-directory: ${{ github.workspace }}
 
@@ -30,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: payload-webhook
-          path: compiled/payload-webhook.smx
+          path: scripting/payload-webhook.smx
           if-no-files-found: error
 
       - uses: "marvinpinto/action-automatic-releases@latest"
@@ -40,6 +40,6 @@ jobs:
           prerelease: true
           title: "Beta"
           files: |
-            *.smx
+            scripting/payload-webhook.smx
             logstf.inc
             SteamWorks.inc
