--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -22,7 +22,7 @@ jobs:
           for file in scripting/${plugin_name}*.sp
           do
             echo -e "\nCompiling $file..."
-            spcomp -w234 -O2 -v2 -i ./scripting/include $file
+            spcomp -w234 -O2 -v2 -i ./scripting/include $file -o scripting/$file.smx
           done
         working-directory: ${{ github.workspace }}
 
