--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
           for file in scripting/${plugin_name}*.sp
           do
             echo -e "\nCompiling $file..."
-            spcomp -w234 -O2 -v2 -i ./scripting/include $file -D compiled
+            spcomp -w234 -O2 -v2 -i ./scripting/include $file -o scripting/$file.smx
           done
         working-directory: ${{ github.workspace }}
 
